# fourinarow-server

./: .dockerignore  .env_template  .gitignore  Cargo.toml  Dockerfile  README.md  add_req.sh  cross_compile.md  docker-compose.yml  fourinarow-server.service  load_test.html  server.crt  server.pem
src/: client_conn.rs  client_state.rs  game.rs  lobby.rs  lobby_mgr.rs  main.rs  main.rs.tungstenite.bak  main.rs.ws-rs.bak  msg.rs
src/api/: feedback.rs  mod.rs  routes.rs
src/api/chat/: mod.rs
src/api/users/: mod.rs  session_token.rs  user.rs  user_manager.rs  user_mgr.rs
src/database/: chat_msg.rs  friend_requests.rs  friendships.rs  games.rs  mod.rs  users.rs
src/game/: client_adapter.rs  client_conn.rs  client_connection.rs  client_state.rs  connection_mgr.rs  game_info.rs  lobby.rs  lobby_mgr.rs  mod.rs  msg.rs
src/logging/: game_logging.rs  lobby_logging.rs  mod.rs
static/: 404.html  admin.html  delete-account-info.html  index.html  privacy.html  terms.html
