[package]
name = "fourinarow-server"
version = "0.7.1"
authors = ["Filippo Orrù <filippoorru@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix = "0.10"
actix-web = {version = "3.2", features = ["rustls"] }
actix-web-actors = "3.0"
actix-files = "0.4"
actix-service = "1.0"
actix-cors = "0.5"
tokio = "0.3"

base64 = "0.13"
async-std = "1.7"
serde = "*"
serde_json = "*"
csv = "1.1"
rustls = "0.19"
env_logger = "0.8"
rand = "0.7"
futures = "0.3"
sha3 = "0.9"
